# python-learning-club

./: README.md
activities/: 04_28.md  05_02.md  05_05.md  05_09.md  README.md
activities/hip-hop-analysis/: 1 - Hip Hop Data Analysis.ipynb  hip_hop_mixtapes - Listens.csv  pyproject.toml
activities/missing-data/: 0 - NFL Data Cleaning.ipynb  NFL Missing Data.ipynb  NFL Play by Play 2009-2017 (v4).csv  pyproject.toml
activities/visualizations/: Data Visualization.ipynb  pyproject.toml
activities/visualizations/.ipynb_checkpoints/: Data Visualization-checkpoint.ipynb
activities/visualizations/nfl-data/: NFL 2017 Player Salaries.xlsx  NFL 2018 Active Team Rosters.xlsx  stadiums_nfl.csv
examples/simple_structure/: README.md
lessons/: classes.md
lessons/data_types/: booleans.md  numbers.md  strings.md
lessons/tdd/: README.md  example.py  test_example.py
