[tool.poetry]
name = "hip-hop-mixtape-analysis"
version = "0.1.0"
description = ""
authors = ["QuinnManor <matthewq1428@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
pandas = "^1.0.4"
jupyter_nbextensions_configurator = "^0.4.1"
pandas_profiling = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
