[tool.poetry]
name = "visualizations"
version = "0.1.0"
description = ""
authors = ["QuinnManor <matthewq1428@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.0"
pandas = "^1.0.5"
folium = "^0.11.0"
jupyter = "^1.0.0"
gitpython = "^3.1.7"
seaborn = "^0.10.1"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
